# x-platform-cpp-template

./: .clang-format  .clang-format-compat  .clang-tidy  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.py  docker-compose.yml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: ci.yml
cmake/: Conan.cmake  Functions.cmake  Install.cmake  Packaging.cmake  ProjectConfig.cmake  cpp_templateConfig.cmake.in
docs/: CMakeLists.txt  DEPENDENCY_CONFLICTS_FIX.md  FORMATTING_FIXES.md  VSCODE_DEV_CONTAINER.md  custom.css  footer.html  header.html
examples/: CMakeLists.txt  basic_usage.cpp  config_example.cpp  interface_lib_example.hpp  library_user.cpp  shared_lib_example.cpp  shared_lib_example.hpp  static_lib_example.cpp  static_lib_example.hpp
include/cpp_template/: core.hpp  core_impl.hpp  version.hpp
scripts/: check_formatting.sh  setup.sh  validate_formatting.py
src/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  benchmark_core.cpp  test_core.cpp
